apps/base/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: whoami
spec:
  type: lusterIP
  ports:
    - port: 80
  selector:
    app: whoami
